--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Barlow Condensed', sans-serif;
 }
 
 a {
